--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
 
           </div>
           <div class="card_row2">
+            <div class="card 1_1"></div>
+            <div class="card 1_2"></div>
+            <div class="card 1_3"></div>
+            <div class="card 1_4"></div>
 
           </div>
           <div class="card_row3">
+            <div class="card 1_1"></div>
+            <div class="card 1_2"></div>
+            <div class="card 1_3"></div>
+            <div class="card 1_4"></div>
 
           </div>
 
