--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
 
           </div>
           <div class="card_row2">
-            <div class="card 1_1"></div>
-            <div class="card 1_2"></div>
-            <div class="card 1_3"></div>
-            <div class="card 1_4"></div>
+            <div class="card 2_1"></div>
+            <div id="scoperta" class="card 2_2"><span>baloon</span></div>
+            <div class="card 2_3"></div>
+            <div class="card 2_4"></div>
 
           </div>
           <div class="card_row3">
-            <div class="card 1_1"></div>
-            <div class="card 1_2"></div>
-            <div class="card 1_3"></div>
-            <div class="card 1_4"></div>
+            <div class="card 3_1"></div>
+            <div class="card 3_2"></div>
+            <div class="card 3_3"></div>
+            <div class="card 3_4"></div>
 
           </div>
 
