struttura cambiata,manca css

--- a/index.html
+++ b/index.html
@@ -22,40 +22,38 @@
       <div class="container">
         <div class="cards">
           <div class="card_row1">
-            <div class="card 1_1"></div>
-            <div class="card 1_2"></div>
-            <div class="card 1_3"></div>
-            <div class="card 1_4"></div>
+            <div id="img1_a" class="card"> <img src="img/pattern.png" alt=""> <span>Bicycle</span> </div>
+            <div id="img1_b" class="card"> <img src="img/pattern.png" alt=""> <span>Baloon</span> </div>
+            <div id="img1_c" class="card"> <img src="img/pattern.png" alt=""> <span>Bicycle</span> </div>
+            <div id="img1_d" class="card"> <img src="img/pattern.png" alt=""> <span>Baloon</span> </div>
 
           </div>
           <div class="card_row2">
-            <div class="card 2_1"></div>
-            <div id="scoperta" class="card 2_2"><span>baloon</span></div>
-            <div class="card 2_3"></div>
-            <div class="card 2_4"></div>
+            <div id="img2_a" class="card"> <img src="img/pattern.png" alt=""> <span>Submarine</span> </div>
+            <div id="img2_b" class="card"> <img src="img/noun_air_balloon_3134741.png" alt=""></div>
+            <div id="img2_c" class="card"> <img src="img/pattern.png" alt=""> <span>Submarine</span> </div>
+            <div id="img2_d" class="card"> <img src="img/pattern.png" alt=""> <span>Ship</span> </div>
 
           </div>
           <div class="card_row3">
-            <div class="card 3_1"></div>
-            <div class="card 3_2"></div>
-            <div class="card 3_3"></div>
-            <div class="card 3_4"></div>
+            <div id="img3_a" class="card"> <img src="img/pattern.png" alt=""> <span>Tram</span> </div>
+            <div id="img3_b" class="card"> <img src="img/pattern.png" alt=""> <span>Tractor</span> </div>
+            <div id="img3_c" class="card"> <img src="img/pattern.png" alt=""> <span>Tram</span> </div>
+            <div id="img3_d" class="card"> <img src="img/pattern.png" alt=""> <span>Tractor</span> </div>
 
           </div>
-
-
         </div>
-
       </div>
-
     </main>
       <div class="container">
-
       </div>
     <!-- fine main -->
 
     <!-- inizio footer -->
     <footer>
+      <div class="container">
+        <span id="footer">Fatto da IO</span>
+      </div>
     </footer>
     <!-- fine footer -->
 
