--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Potta+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
     <meta charset="utf-8">
     <title>Memory</title>
@@ -21,32 +23,31 @@
     <main>
       <div class="container">
         <div class="cards">
+
           <div class="card_row1">
-            <div id="img1_a" class="card"> <img src="img/pattern.png" alt=""> <span>Bicycle</span> </div>
-            <div id="img1_b" class="card"> <img src="img/pattern.png" alt=""> <span>Baloon</span> </div>
-            <div id="img1_c" class="card"> <img src="img/pattern.png" alt=""> <span>Bicycle</span> </div>
-            <div id="img1_d" class="card"> <img src="img/pattern.png" alt=""> <span>Baloon</span> </div>
-
+            <div id="img1_a" class="card"> <img src="img/pattern.png" alt=""> <span class="medium_lenght">Bicycle</span> </div>
+            <div id="img1_b" class="card"> <img src="img/pattern.png" alt=""> <span class="medium_lenght">Baloon</span> </div>
+            <div id="img1_c" class="card"> <img src="img/pattern.png" alt=""> <span class="medium_lenght">Bicycle</span> </div>
+            <div id="img1_d" class="card"> <img src="img/pattern.png" alt=""> <span class="medium_lenght">Baloon</span> </div>
           </div>
+
           <div class="card_row2">
-            <div id="img2_a" class="card"> <img src="img/pattern.png" alt=""> <span>Submarine</span> </div>
-            <div id="img2_b" class="card"> <img src="img/noun_air_balloon_3134741.png" alt=""></div>
-            <div id="img2_c" class="card"> <img src="img/pattern.png" alt=""> <span>Submarine</span> </div>
+            <div id="img2_a" class="card"> <img src="img/pattern.png" alt=""> <span class="large_lenght">Submarine</span> </div>
+            <div id="img2_b" class="card"> <img src="img/noun_air_balloon_3134741.png" alt=""><span class="medium_lenght">Baloon</span></div>
+            <div id="img2_c" class="card"> <img src="img/pattern.png" alt=""> <span class="large_lenght">Submarine</span> </div>
             <div id="img2_d" class="card"> <img src="img/pattern.png" alt=""> <span>Ship</span> </div>
-
           </div>
+
           <div class="card_row3">
             <div id="img3_a" class="card"> <img src="img/pattern.png" alt=""> <span>Tram</span> </div>
-            <div id="img3_b" class="card"> <img src="img/pattern.png" alt=""> <span>Tractor</span> </div>
+            <div id="img3_b" class="card"> <img src="img/pattern.png" alt=""> <span class="medium_lenght">Tractor</span> </div>
             <div id="img3_c" class="card"> <img src="img/pattern.png" alt=""> <span>Tram</span> </div>
-            <div id="img3_d" class="card"> <img src="img/pattern.png" alt=""> <span>Tractor</span> </div>
-
+            <div id="img3_d" class="card"> <img src="img/pattern.png" alt=""> <span class="medium_lenght">Tractor</span> </div>
           </div>
+
         </div>
       </div>
     </main>
-      <div class="container">
-      </div>
     <!-- fine main -->
 
     <!-- inizio footer -->
